# win-whisper

./: .gitignore  LICENSE  README.md  build.bat  pyproject.toml  requirements.txt  win-whisper.spec
.github/: FUNDING.yml
.github/workflows/: release.yml
win_whisper/: __init__.py  __main__.py  app.py  engine.py  log.py  overlay.py  win32.py
